# learn

./: .env  .gitignore  Answer.jsh  App.scala  Array1.jsh  Array2.jsh  Array3.jsh  Array4.jsh  Array6.jsh  Array7.jsh  Array8.jsh  Array9.jsh  BMI1.jsh  BMI2.jsh  BMI3.jsh  BMI4.jsh  BMI5.jsh  BMI6.jsh  Bit.jsh  BitShift.jsh  Bool.jsh  Bool1.jsh  Bool2.jsh  BuggyAnimals.scala  ByteStringSample.hs  CCTherm.scala  Calculate.jsh  Calculation.jsh  CastConversion1.jsh  CastConversion2.jsh  CharacterAdd.jsh  CharacterCode.jsh  ChecksumAccumulator.scala  ConditionalOperator1.jsh  ConditionalOperator2.jsh  ConditionalOperator3.jsh  Constructor.hs  Currency.scala  Dainyu.jsh  DainyuType.jsh  (+1060 more)
01/: draw_tree.py
02/: for.py  function.py  function2.py  if.py  list.py  localvar.py  module.py  string.py  type.py  var.py
03/: deffizzbuzz.py  dict.py  fizzbuzz.py  funclocalvar.py  if.py  janken.py  set.py
04/: chrcode.py  dict.py  file.py  foo.txt  for.py  func.py  integer.py  list.py  listindex.py  newfile.txt  string.py  test.txt  unpack.py
05/: comprehension.py  functional.py  generator.py  hofunction.py  iterator.py  some.txt
06/: decimal.py  dicttest.py  myclass.py  prism.py  prop.py  slot.py  strdict.py
07/: bookmark.py  testmodule.py  usebookmark.py  usetestmodule.py
09/: classscope.py  dir.py  getattr.py  method.py  objecttype.py  scopetest1.py  scopetest2.py
10/: filelen.py  traceback.py
11/: csvread.py  csvwrite.py  datetime.py  jsonsamp.py  (+11 more)
sample-project/: sample-project.cabal
sample-project/src/: Http.hs  Main.hs  monad-par_sample.hs  safe-exception.hs
(+3439 files in other folders)
