name:                sample-project
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/sample-project#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2023 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                     CHANGELOG.md
                     
executable async-http
  hs-source-dirs:      src
  main-is:             Http.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , async, bytestring, http-conduit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N

executable async
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , async
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
